--- a/index.html
+++ b/index.html
@@ -6,64 +6,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="это базовый курс по эйчтимл" />
     <meta name="keywords" content="css html" />
+    <link rel="stylesheet" href="index.css" />
     <title>Резюме</title>
   </head>
   <body>
-    <img src="/Резалт скул/Очмодный.jpg" width="400" />
-    <h1>Андрей Рашкин</h1>
-    <p>Являюсь Инженером строительного контроля в организации Малышева73.</p>
-    <p>Я люблю кататься на сноуборде, ходить на миттинги.</p>
-    <p><strong>Список моих социальных сетей:</strong></p>
-    <p>
-      <a href="https://vk.com/rashkin1" target="_blank">Vk</a> |
-      <a href="https://vk.com/rashkin1" target="_blank">Instafram</a> |
-      <a href="https://www.youtube.com/" target="_blank">youtube</a>
-    </p>
-    <h2>Мои хобби</h2>
-    <ol>
-      <li>Баскетбол</li>
-      <li>Либерализм</li>
-      <li>Атеизм</li>
-    </ol>
-    <h3>Опыт работы</h3>
-    <table>
-      <tr>
-        <th>Название</th>
-        <th>Должность</th>
-        <th>Год</th>
-      </tr>
-      <tr>
-        <td>ООО "ДиаТекСтрой"</td>
-        <td>Производитель работ</td>
-        <td>2019-2022</td>
-      </tr>
-      <tr>
-        <td>Малышева 73</td>
-        <td>Инженер строительного контроля</td>
-        <td>2022-Сейчас</td>
-      </tr>
-    </table>
-    <h2>Связаться со мной</h2>
-    <form action="/">
-      <div>
-        <lable for="text">Имя</lable>
-        <input type="text" id="text" placeholder="Введите имя" />
+    <div class="container">
+      <div class="shap">
+        <div class="ava">
+          <img src="/Резалт скул/Очмодный.jpg" width="400" />
+        </div>
+        <div class="info">
+          <h1>Андрей Рашкин</h1>
+          <p class="ss">
+            Являюсь Инженером строительного контроля в организации Малышева73.
+          </p>
+          <p class="ss">Я люблю кататься на сноуборде, ходить на миттинги.</p>
+          <div class="soc">
+            <p class="aa"><strong>Список моих социальных сетей:</strong></p>
+            <p>
+              <a href="https://vk.com/rashkin1" target="_blank">Vk</a> |
+              <a href="https://vk.com/rashkin1" target="_blank">Instafram</a> |
+              <a href="https://www.youtube.com/" target="_blank">youtube</a>
+            </p>
+          </div>
+        </div>
       </div>
-      <div>
-        <lable for="email">Email</lable>
-        <input type="email" id="email" placeholder="Введите email" />
+      <div class="card">
+        <h2>Мои хобби</h2>
+        <ol class="list">
+          <li>Баскетбол</li>
+          <li>Либерализм</li>
+          <li>Атеизм</li>
+        </ol>
       </div>
-      <div>
-        <lable for="message">Ваше сообщение:</lable>
-        <br />
-        <textarea
-          id="message"
-          cols="20"
-          rows="5"
-          placeholder="Введите сообщение..."
-        ></textarea>
+      <div class="card">
+        <h2>Опыт работы</h2>
+        <table class="table">
+          <tr>
+            <th>Название</th>
+            <th>Должность</th>
+            <th>Год</th>
+          </tr>
+          <tr>
+            <td>ООО "ДиаТекСтрой"</td>
+            <td>Производитель работ</td>
+            <td>2019-2022</td>
+          </tr>
+          <tr>
+            <td>Малышева 73</td>
+            <td>Инженер строительного контроля</td>
+            <td>2022-Сейчас</td>
+          </tr>
+        </table>
       </div>
-      <button type="submit">Отправить!</button>
-    </form>
+      <div class="svaz">
+        <h2>Связаться со мной</h2>
+        <form action="/">
+          <div class="svaz2">
+            <div class="gr">
+              <lable for="text">Ваше имя</lable> <br />
+              <input type="text" id="text" placeholder="Введите имя" />
+            </div>
+            <div class="gr">
+              <lable for="email">Email</lable><br />
+              <input type="email" id="email" placeholder="Введите email" />
+            </div>
+        </div>
+            <div class="gr">
+              <lable for="message">Ваше сообщение:</lable>
+              <br />
+              <textarea
+                id="message"
+              
+                placeholder="Введите сообщение..."
+              ></textarea>
+            </div>
+          
+          <button type="submit" class="btn">Отправить!</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
