--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="shap">
         <div class="ava">
-          <img src="/Резалт скул/Очмодный.jpg" width="400" />
+          <img src="Очмодный.jpg" width="400" />
         </div>
         <div class="info">
           <h1>Андрей Рашкин</h1>
